# tasty

./: Cargo.toml  README.md
examples/: error_cases.toml  login_tests.toml  regex_matching.toml  response_reference.toml  single_endpoint.toml
src/: lib.rs  main.rs
tests/: integration_tests.rs
