[package]
name = "tasty"
version = "0.9.0"
authors = ["Jesse Lawson <jesse@lawsonry.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
description = "A CLI that runs API tests defined and grouped in TOML files."

[dependencies]
anyhow = "1.0.96"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
colored = "2"
clap = { version = "4.5.30", features = ["derive"] }
serde_json = "1.0.139"
httpmock = "0.7.0"
